[gd_scene load_steps=2 format=2]

[ext_resource path="res://Script/Tela_Inicial.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 370.0
margin_top = 495.0
margin_right = 635.0
margin_bottom = 578.0
text = "Clique aqui"

[node name="Button2" type="Button" parent="."]
margin_left = 352.0
margin_top = 102.0
margin_right = 617.0
margin_bottom = 185.0
text = "Button2"

[node name="Button3" type="Button" parent="."]
margin_left = 703.0
margin_top = 97.0
margin_right = 968.0
margin_bottom = 180.0
text = "Button3"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 78.0
margin_top = 112.0
margin_right = 245.0
margin_bottom = 246.0

[node name="dado2" type="LineEdit" parent="."]
visible = false
margin_left = 426.0
margin_top = 117.0
margin_right = 593.0
margin_bottom = 251.0

[node name="dado3" type="LineEdit" parent="."]
visible = false
margin_left = 781.0
margin_top = 120.0
margin_right = 948.0
margin_bottom = 254.0

[node name="Label1" type="Label" parent="."]
visible = false
margin_left = 97.0
margin_top = 23.0
margin_right = 216.0
margin_bottom = 88.0
text = "Dado 1"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 451.0
margin_top = 29.0
margin_right = 570.0
margin_bottom = 94.0
text = "
"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
visible = false
margin_left = 810.0
margin_top = 33.0
margin_right = 929.0
margin_bottom = 98.0
text = "Dado 3"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 122.0
margin_top = 281.0
margin_right = 956.0
margin_bottom = 457.0

[node name="resposta" type="RichTextLabel" parent="ColorRect"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 54.0
margin_top = 19.0
margin_right = 786.0
margin_bottom = 146.0

[node name="Label" type="Label" parent="."]
margin_left = 58.0
margin_top = 53.0
margin_right = 256.0
margin_bottom = 97.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
